--- a/app/src/main/res/layout/fl_fragment_main.xml
+++ b/app/src/main/res/layout/fl_fragment_main.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black50">
+    android:background="@color/teal_700"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/floating_text"/>
+        android:layout_gravity="center"
+        android:text="@string/fl_fragment_a"
+        android:textColor="@color/black"
+        android:textSize="40sp" />
 
     <Button
-        android:id="@+id/bye_button"
+        android:id="@+id/next_fragment_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="5dp"
-        android:text="@string/bye"/>
+        android:layout_marginTop="100dp"
+        android:text="Next" />
+
 </LinearLayout>
