--- a/app/src/main/res/layout/fl_thread_fragment.xml
+++ b/app/src/main/res/layout/fl_thread_fragment.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_700"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -10,15 +9,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="@string/fl_fragment_a"
+        android:text="@string/fl_fragment_b"
         android:textColor="@color/black"
         android:textSize="40sp" />
 
     <Button
-        android:id="@+id/next_fragment_button"
+        android:id="@+id/pop_fragment_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:text="Next" />
+        android:text="Back" />
 
 </LinearLayout>
